--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up JDK 25
-        uses: oracle/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          website: jdk.java.net
-          release: 25
+          distribution: temurin
+          java-version: '25'
 
       - name: Cache Maven packages
         uses: actions/cache@v4
