chore: ignore agent prompt files (CLAUDE/ANALYST/ARCHITECT/REQUIREMENTS/SPEC)
These are local-only files for Claude Code agent configuration,
not project documentation. Removed from history via filter-repo.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,17 @@ dependency-reduced-pom.xml
 *.swp
 *~
 
+# Claude Code / Agent prompts
+.claude/
+CLAUDE.md
+ANALYST.md
+ARCHITECT.md
+REQUIREMENTS.md
+SPEC.md
+
+# Serena
+.serena/
+
 # OS
 .DS_Store
 Thumbs.db
