chore: derive server version from pom.xml via Maven filtering
Replace hardcoded SERVER_VERSION with Maven resource filtering so the
version string is always in sync with the POM.

--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,22 @@
 
     <build>
         <finalName>maven-mcp</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>maven-mcp.properties</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>maven-mcp.properties</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
