--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
 
         <!-- Dependency versions -->
         <mcp-sdk.version>0.17.2</mcp-sdk.version>
@@ -115,8 +114,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <source>11</source>
-                            <target>11</target>
+                            <release>11</release>
                             <compileSourceRoots>
                                 <compileSourceRoot>${project.basedir}/src/main/java-bootstrap</compileSourceRoot>
                             </compileSourceRoots>
@@ -130,8 +128,7 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <source>21</source>
-                            <target>21</target>
+                            <release>21</release>
                         </configuration>
                     </execution>
                 </executions>
