fix: exclude BootstrapTest from default surefire run
BootstrapTest requires the compile-bootstrap execution (Java 11 bytecode)
which only runs during full lifecycle. Exclude it by default so testOnly
mode works, and add a ci profile that re-enables it for CI builds.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build and test
-        run: mvn -B verify
+        run: mvn -B verify -Pci
 
       - name: Upload test results
         if: always()
